# NullForge

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
docs/: README.md  ai-assistant.md  build-compiler.md  debugger.md  disassembler.md  editor.md  getting-started.md  interface.md  overview.md  payload-library.md  plugins.md  rop-toolkit.md  settings.md  shellcode-generator.md  shortcuts.md  workspaces.md
exploits/auxiliary/: as_rep_roasting.py  bloodhound_data_collector.py  dcsync_attack.py  ftp_brute.py  hash_capture_responder.py  kerberoasting.py  ldap_dump_users.py  password_spray_kerberos.py  password_spray_smb.py  scanner_bluekeep_rdp.py  scanner_log4shell.py  scanner_proxylogon.py  scanner_smb_ms17010.py  scanner_spring4shell.py  smb_enum_shares.py  ssh_brute.py  ssl_scanner.py  subdomain_enum.py  waf_bypass.py  web_fuzzer.py
exploits/osx/: cve_2015_3673_iokit.py  cve_2017_13872_apfs.py  cve_2018_4150_iokit.py  cve_2019_8526_disk_arb.py  cve_2020_27932_xnu.py  cve_2020_9771_siri.py  cve_2021_1782_ios_kernel.py  cve_2021_30657_sip_bypass.py  cve_2021_30869_xnu.py  cve_2021_30900_safari.py  cve_2022_22616_airplay.py  cve_2022_32893_webkit.py  cve_2022_32894_macos.py  cve_2023_23529_webkit.py  cve_2023_32434_xnu.py  (+9 more)
src/: App.tsx  index.css  main.tsx  monacoWorkers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  db.rs  debugger.rs  disasm.rs  mod.rs  plugins.rs  settings.rs  shell.rs
(+570 files in other folders)
